Stylesheet/emote/tag updates 2015-02-15

--- a/source-css/colgateinquisition.css
+++ b/source-css/colgateinquisition.css
@@ -603,9 +603,82 @@ height: 150px;
 background-image: url(%%colgatespreadsheet3%%)
 }
 
+/* colgate oh fuck */
+a[href^="/colgateohfuck"] {
+background-position: -1200px 0px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
 
+/* colgate wubs */
+a[href^="/colgatewubs"] {
+background-position: -1350px 0px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
 
+/* colgate smirking */
+a[href^="/colgatesmirking"] {
+background-position: 0px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
 
+/* brokenheartdash */
+a[href^="/brokenheartdash"] {
+background-position: -150px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
+
+/* colgate take my money */
+a[href^="/colgatetakemymoney"] {
+background-position: -300px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
+
+/* lyra cry */
+a[href^="/lyracry"] {
+background-position: -450px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
+
+/* colgate silly */
+a[href^="/colgatesilly"] {
+background-position: -600px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
 
 
 
