--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -847,6 +847,19 @@ border: 2px solid green; border-radius: 20px;
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:white;}
 
+.flair-emerald
+{ color:#25607C; 
+border: 2px solid #25607C; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:#64C891;}
+
+.flair-plasmahawk
+{ color:#d235e5; 
+border: 2px solid #d235e5; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:#241919;}
+
+
 /* EMOTE SPRITESHEETS (BY CHARACTER) */
 
 /* GAME CHANGER */
