--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -1,13 +1,19 @@
 .id-t3_145m8r.link .title{font-size:large}
 
 /* Changes background  */
-body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%screwwinter%%)  no-repeat  fixed 66% 100% !important;
+ body:first-of-type, body.res-nightmode:first-of-type {
+    background:  url(%%x40%%)  no-repeat  fixed 66% 100% !important;
 }
 
+
+ 
+ 
+
+
 /* Banner image and associated height values */
+
  #header #header-bottom-left {
-   background: url(%%awlmao%%) 50% 0px !important;
+   background: url(%%cogglerbed%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
