Stylesheet/emote/tag updates 2015-02-23

--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -359,7 +359,8 @@ background:url(%%BerryMail%%);
 
 /*The End of the Mega Awesome /r/Berrytrain exclusive mail changer machine 4200 with air conditioning and scones*/
 
-.author[href$="/Battlesmit"]:before {content: 'Captain ' ;}
+.author[href$="/Battlesmit"]:after {content: ' the buttface' ;}
+
 
 .author[href$="/KillerRabbit1253"]:before {content: 'King Queen Stallion ' ;}
 .author[href$="/KillerRabbit1253"]:after {content: ' is the princess of ice cream, BerryTrain, and Boxy ' ;}
