--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -719,6 +719,46 @@ background-position: -224px -400px;
 
 /*stylesheet1 "sheet15" end*/
 
+/*stylesheet1 "sheet16" */
+
+a[href|="/ccwut"] {
+float:left;
+width:306px;
+height:245px;
+background-repeat:no-repeat;
+background-image:url(%%sheet16%%);
+background-position: 0px 0px;
+}
+
+a[href|="/ccbow"] {
+float:left;
+width:159px;
+height:170px;
+background-repeat:no-repeat;
+background-image:url(%%sheet16%%);
+background-position: -350px 0px;
+}
+
+a[href|="/ccfacehoof"] {
+float:left;
+width:190px;
+height:148px;
+background-repeat:no-repeat;
+background-image:url(%%sheet16%%);
+background-position: 0px -250px;
+}
+
+a[href|="/ccblanket"] {
+float:left;
+width:202px;
+height:117px;
+background-repeat:no-repeat;
+background-image:url(%%sheet16%%);
+background-position: -350px -250px;
+}
+
+/*stylesheet1 "sheet16 end */
+
 /*un-assigned*/
 
 a[href|="/chasercat"] {
@@ -784,14 +824,6 @@ width:182px;
 height:200px;
 background-repeat:no-repeat;
 background-image:url(%%ccwait%%);
-}
-
-a[href|="/ccbow"] {
-float:left;
-width:159px;
-height:170px;
-background-repeat:no-repeat;
-background-image:url(%%ccbow%%);
 }
 
 a[href|="/cowcc"] {
@@ -864,14 +896,6 @@ background-repeat:no-repeat;
 background-image:url(%%ccbee%%);
 }
 
-a[href|="/ccwut"] {
-float:left;
-width:306px;
-height:245px;
-background-repeat:no-repeat;
-background-image:url(%%ccwut%%);
-}
-
 a[href|="/cccheer"] {
 float:left;
 width:250px;
@@ -918,14 +942,6 @@ width:176px;
 height:180px;
 background-repeat:no-repeat;
 background-image:url(%%saintcowchaser%%);
-}
-
-a[href|="/ccfacehoof"] {
-float:left;
-width:190px;
-height:148px;
-background-repeat:no-repeat;
-background-image:url(%%ccfacehoof%%);
 }
 
 a[href|="/ccinabox"] {
@@ -1000,7 +1016,8 @@ background-repeat:no-repeat;
 background-image:url(%%fillyflitterooh%%);
 }
 
-/*un-assigned end - 47 Images*/
+
+/*un-assigned end - 44 Images*/
 
 a.author[href$="LunarMist2"] {  
 font-size:0!important;  
