--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -13,7 +13,7 @@
 /* Banner image and associated height values */
 
  #header #header-bottom-left {
-   background: url(%%cogglerbed%%) 50% 0px !important;
+   background: url(%%disapony2%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
@@ -29,8 +29,8 @@
     transform:translate(500px , 0px)
 }
 
-/*
-.side a[href="http://www.elfster.com/exchange/view/12491809/bac071/"]
+
+.side a[href="https://webchat.mlas1.org/?nick=Gummy...&channels=mlas1&prompt=1"]
 {
    display:block;
    width: 512px;
@@ -42,7 +42,7 @@
    z-index: 99 !important;
    margin-left: -256px;
 }
-*/
+
 
 #header-bottom-right
 {
@@ -1155,7 +1155,7 @@ a.author[href$=RisenLordM]:after { content:" from the dead" }
 a.author[href$=Lord_Ninka]:after { content:" The forgotten DBZ character" }
 a.author[href$=Princess_Pwny]:after { content:" your fun" }
 a.author[href$=tuckels]:after { content:" on 05/08/2014" }
-a.author[href$=CogglerSenpai]:after { content:" the art master" }
+a.author[href$=CogglerSenpai]:after { content:" the fart master" }
 a.author[href$=randyrules]:after {content:" of [BANNED]"}
 a.author[href$=TripsOcho]:after { content:" touches all the butts" }
 a.author[href$=sympathyfordiscord]:after { content:" ~ augie" }
