--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -306,3 +306,7 @@ border:none;
 .sidebox.submit.submit-link .morelink:hover a {color:#AFCF5F}
 .sidebox.submit.submit-text .morelink:hover a {color:#AFCF5F}
 .morelink .nub, .morelink .nub:hover { display: none }
+
+.md blockquote {
+    border-left: 2px solid #336699;
+}
