--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2213,3 +2213,13 @@ a[href|="/discordwave"] {
  background-position: -0px -800px;  
 } 
  
+ 
+a[href|="/tavidoom"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 127px;
+ height: 150px;
+ background-image: url(%%Octavia-von-Doom-emote%%);
+} 
+ 
