--- a/source-css/lyra.css
+++ b/source-css/lyra.css
@@ -345,3 +345,86 @@ pdf_icon {background-position:-64px -384px;}
 .thumbnail.default {
     background-position: 0px -73px !important
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@keyframes spaceboots {
+        0% { transform: translate(2px, 1px) rotate(0deg); }
+        10% { transform: translate(-1px, -2px) rotate(-1deg); }
+        20% { transform: translate(-3px, 0px) rotate(1deg); }
+        30% { transform: translate(0px, 2px) rotate(0deg); }
+        40% { transform: translate(1px, -1px) rotate(1deg); }
+        50% { transform: translate(-1px, 2px) rotate(-1deg); }
+        60% { transform: translate(-3px, 1px) rotate(0deg); }
+        70% { transform: translate(2px, 1px) rotate(-1deg); }
+        80% { transform: translate(-1px, -1px) rotate(1deg); }
+        90% { transform: translate(2px, 2px) rotate(0deg); }
+        100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+ 
+@-moz-keyframes spaceboots {
+        0% { -moz-transform: translate(2px, 1px) rotate(0deg); }
+        10% { -moz-transform: translate(-1px, -2px) rotate(-1deg); }
+        20% { -moz-transform: translate(-3px, 0px) rotate(1deg); }
+        30% { -moz-transform: translate(0px, 2px) rotate(0deg); }
+        40% { -moz-transform: translate(1px, -1px) rotate(1deg); }
+        50% { -moz-transform: translate(-1px, 2px) rotate(-1deg); }
+        60% { -moz-transform: translate(-3px, 1px) rotate(0deg); }
+        70% { -moz-transform: translate(2px, 1px) rotate(-1deg); }
+        80% { -moz-transform: translate(-1px, -1px) rotate(1deg); }
+        90% { -moz-transform: translate(2px, 2px) rotate(0deg); }
+        100% { -moz-transform: translate(1px, -2px) rotate(-1deg); }
+}
+ 
+@-webkit-keyframes spaceboots {
+        0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+        10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+        20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+        30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+        40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+        50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+        60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+        70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+        80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+        90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+        100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+body {
+        -webkit-animation-name: spaceboots;
+        -webkit-animation-duration: 0.8s;
+        -webkit-transform-origin:50% 50%;
+        -webkit-animation-iteration-count: infinite;
+        -webkit-animation-timing-function: linear;
+        -moz-animation-name: spaceboots;
+        -moz-animation-duration: 0.8s;
+        -moz-transform-origin:50% 50%;
+        -moz-animation-iteration-count: infinite;
+        -moz-animation-timing-function: linear;
+        animation-name: spaceboots;
+        animation-duration: 0.8s;
+        transform-origin:50% 50%;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+}
