--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -277,12 +277,12 @@ background-position: 0% -800%
 */
 /*Bacond End*/
 
-body{background: #ffffff url(%%twilightbackground%%) no-repeat fixed center center}
+body{background: #ffffff url(%%bunny-background%%) no-repeat fixed center center}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px;font-size:1em;margin:0;font-weight:100}
 .content .md h1:before{content:">"}
 
 .res-nightmode body {
-background: url(%%twilightbackground%%) center center no-repeat fixed #222222 !important;
+background: url(%%bunny-background%%) center center no-repeat fixed #222222 !important;
 }
 
 body.res-nightmode div.content {
@@ -1057,7 +1057,8 @@ a[href|="/ripferrbearand20"] {
  position: relative;
  top: 75px;
  right: 70px;
- background:url(%%filly-table%%)
+ background:url(%%filly-table%%);
+ background-position: 0 -1200%
 }
 
 .commentarea .usertext-edit:not(.viewSource){padding-top: 70px; margin-left: -70px}
@@ -1280,7 +1281,7 @@ a.author[href$="HeWho_MustNotBeNamed"] {font-size:0!important; overflow:hidden; 
 a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibility:visible!important; content: "HeWho_MustNotBeNamedEh?"}
 
 a.author[href$="Fuzzy_Gauntlets"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Fuzzy_Gauntlets"]:before {font-size:10px!important; visibility:visible!important; content: "Fuzzy_Infinity_Gauntlets"}
+a.author[href$="Fuzzy_Gauntlets"]:before {font-size:10px!important; visibility:visible!important; content: "Raunchy_Gauntlets"}
 
 a.author[href$="1125a"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="1125a"]:before {font-size:10px!important; visibility:visible!important; content: "1125au"}
