--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -165,9 +165,7 @@ border-top-right-radius: 5px;
 
 .sidecontentbox a.helplink
 {
- color:white!important;
- font-size:0px!important;
- content:""
+ font-size:.9em!important;
 }
 
 
@@ -228,13 +226,13 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%pinkie-stache-hat%%);
- width:60px;
- height:60px;
- margin-top:-35px;
+ background:url(%%spacing%%);
+ width:72px;
+ height:42px;
+ margin-top:-16px;
  margin-left:5px;
  margin-bottom:0px;
- margin-right:-40px;
+ margin-right:-30px;
 }
 
 .thumbnail:empty{background-image:url(%%thumbnails%%)!important}
@@ -511,11 +509,11 @@ Submit and mod message buttons stolen from /r/StevenUniverse
 
 /*Message the mods*/
 
-.sidecontentbox a.helplink {
+.side a[href="/message/compose?to=%2Fr%2Fmylittlepony#sidebar"] {
     margin-top: 8px;
 }
 
-.helplink[href="/message/compose?to=%2Fr%2Fmylittlepony"] {
+.side a[href="/message/compose?to=%2Fr%2Fmylittlepony#sidebar"] {
     display: block;
     font-weight: normal;
     letter-spacing: 0;
@@ -534,25 +532,25 @@ Submit and mod message buttons stolen from /r/StevenUniverse
     text-decoration: none!important;
 }
 
-.helplink[href="/message/compose?to=%2Fr%2Fmylittlepony"]:hover {
+.side a[href="/message/compose?to=%2Fr%2Fmylittlepony#sidebar"]:hover {
     background: #fff0f9;
     color: #ff9bd9;
     background-image: url(%%celestia%%);
     background-repeat: no-repeat;
 }
 
-.helplink[href="/message/compose?to=%2Fr%2Fmylittlepony"]:before
+.side a[href="/message/compose?to=%2Fr%2Fmylittlepony#sidebar"]:before
 {
  color:#fff;
  font-size:medium!important;
  content:"Message the Mods"
 }
 
-.helplink[href="/message/compose?to=%2Fr%2Fmylittlepony"]:hover:before {
+.side a[href="/message/compose?to=%2Fr%2Fmylittlepony#sidebar"]:hover:before {
     color: #ff9bd9;
 }
 
-.submit-page .helplink[href="/message/compose?to=%2Fr%2Fmylittlepony"] {
+.submit-page .side a[href="/message/compose?to=%2Fr%2Fmylittlepony#sidebar"] {
     top: 162px
 }
 
@@ -1647,3 +1645,4 @@ div.bottom span.author:after {
 }
 
 .md sup {line-height: inherit}
+
