--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -667,9 +667,9 @@ body.res-nightmode form.flairtoggle, body.res-nightmode .trophy-area .content, .
 background-color: transparent !important
 }
 
-.flairselector .customizer {
+/* .flairselector .customizer {
 display: none !important;
-}
+} */
 
 .flair {
 border: 0px !important;
@@ -1188,3 +1188,4 @@ a[href*="Captain_Awesomex"]{background:0;-webkit-animation:rainbow .4s linear in
 
 
 /*End of every comment random filly*/
+
