--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -352,6 +352,7 @@ vertical-align: middle;
 .flair-mspeachbottom {background-position: 0 -1312px}
 .flair-flashsentry {background-position: 0 -1328px;}
 .flair-sunsetshimmer {background-position: 0 -1344px;}
+/* TODO: STEAL MORE FLAIRS */
 
 /* Super secret flairs */
 
@@ -442,7 +443,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -454,7 +455,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -539,7 +540,7 @@ a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Misfits l */
-a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"]
+a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /*
@@ -587,11 +588,11 @@ a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rd
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/cocosmile"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"]
+a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/cocosmile"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"]
 {background-position: -100% -300%;}
 
 /* Grid pos 2,3 'motes */
-a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"], a[href|="/shittypone"], a[href|="/apathiaeyebrow"]
+a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"], a[href|="/shittypone"], a[href|="/apathiaeyebrow"], a[href|="/trixieawkward"]
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
@@ -631,7 +632,7 @@ a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|=
 {background-position: -200% -600%;}
 
 /* Grid pos 0,7 'motes */
-a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"], a[href|="/wartortle"], a[href|="/scootapprove"]
+a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"], a[href|="/wartortle"], a[href|="/scootapprove"], a[href|="/queensmeel"], a[href|="/queenglee"]
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
@@ -1231,3 +1232,5 @@ a[href|="/flutterbutter"] {width:125px;height:99px;background-position: -490px 0
 a[href|="/twilightthebearded"] {width:129px;height:150px;background-position: -328px -99px;}
 a[href|="/creepershy"] {width:117px;height:150px;background-position: -457px -99px;}
 a[href|="/engineeraj"] {width:200px;height:124px;background-position: -319px -249px;}
+a[href|="/youflunk"] {width:87px;height:135px;background-position: -615px 0;}
+a[href|="/bloombatsquee"] {width:99px;height:120px;background-position: -603px -135px;}
