--- a/source-css/ponymotesextra.css
+++ b/source-css/ponymotesextra.css
@@ -104,3 +104,38 @@ padding-left: 5px;
 font-weight: bolder;
 font-size: large;
 }
+
+/* Fun fact: This was originally the first draft of the /r/PonyMotes 2014 April Fools. */
+
+.titlebox blockquote:nth-child(1) {
+background-color: blue !important;
+height: 100%;
+width: 100%;
+position: fixed;
+top: 0px;
+left: 0px;
+z-index: 9001;
+color: white;
+padding-top: 15%;
+padding-left: 0;
+margin: 0;
+font-size: 3.5em;
+text-align: center;
+border-style: none;
+color: white !important;
+}
+
+.titlebox blockquote:nth-child(1) strong code {
+background-color: white !important;
+color: blue !important;
+}
+
+.titlebox blockquote:nth-child(1) code {
+color: white !important;
+background-color: transparent !important;
+border: none !important;
+}
+
+html:lang(zz) .titlebox blockquote:nth-child(1), body.comments-page .titlebox blockquote:nth-child(1) {
+display: none !important;
+}
