Partial fix for earthquakes, probably

--- a/addon/extracss-pure.css
+++ b/addon/extracss-pure.css
@@ -424,6 +424,6 @@
 
 .bpflag-intensifies {
     position: relative;
-    margin: 2px;
+    margin: 2px !important;
     animation: intensifies .2s linear 0s infinite alternate !important;
 }
