--- a/addon/extracss-webkit.css
+++ b/addon/extracss-webkit.css
@@ -416,6 +416,6 @@
 
 .bpflag-intensifies {
     position: relative;
-    margin: 2px;
+    margin: 2px !important;
     -webkit-animation: intensifies .2s linear 0s infinite alternate !important;
 }
