Stylesheet/emote/tag updates 2015-03-02

--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -277,12 +277,12 @@ background-position: 0% -800%
 */
 /*Bacond End*/
 
-body{background: #ffffff url(%%bunny-background%%) no-repeat fixed center center}
+body{background: #ffffff url(%%scootabackground%%) no-repeat fixed center center}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px;font-size:1em;margin:0;font-weight:100}
 .content .md h1:before{content:">"}
 
 .res-nightmode body {
-background: url(%%bunny-background%%) center center no-repeat fixed #222222 !important;
+background: url(%%scootabackground%%) center center no-repeat fixed #222222 !important;
 }
 
 body.res-nightmode div.content {
