--- a/source-css/sweetiebot.css
+++ b/source-css/sweetiebot.css
@@ -508,7 +508,7 @@ select {
 a[href|="/ponibotsb"], a[href|="/ponibotsbinquiry"], a[href|="/ponibotsbpowersaving"],
 a[href|="/ponibotfs"], a[href|="/ponibotpp"], a[href|="/ponibotaj"], a[href|="/ponibotrar"],
 a[href|="/ponibotrdpulse"], a[href|="/ponibotrdcombat"], a[href|="/ponibotrdpassive"], a[href|="/ponibotrdinquiry"],
-a[href|="/ponibotderpy"], a[href|="/ponibottwi"] {
+a[href|="/ponibotderpy"], a[href|="/ponibottwi"], a[href|="/ponibotfssteampunk"] {
   float: left;
   display: block;
   height: 150px;
@@ -578,6 +578,11 @@ a[href|="/ponibotderpy"] {
 a[href|="/ponibottwi"] {
   width: 120px;
   background-position: -125px -450px;
+}
+
+a[href|="/ponibotfssteampunk"] {
+  width: 120px;
+  background-position: -245px -450px;
 }
 
 /* Ponibots - END */
