--- a/source-css/tacoshy.css
+++ b/source-css/tacoshy.css
@@ -500,7 +500,7 @@ width: 312px;
 background-position: -677px -0px
 }
 
-a[href|="/tacochill"], a[href|="/scrunchietaco"] {  
+a[href|="/tacochill"], a[href|="/scrunchietaco"], a[href|="/B1"]  {  
 
 height: 300px;
 display: block;
