--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -6,14 +6,20 @@
 }
 
 
+/* emote overflow fix */
+.md:after
+{
+    content:"";
+    display:block;
+    width:100%;
+    clear:both;
+}
  
  
-
-
 /* Banner image and associated height values */
 
  #header #header-bottom-left {
-   background: url(%%disapony2%%) 50% 0px !important;
+   background: url(%%SPAGEETBANER%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
@@ -30,7 +36,7 @@
 }
 
 
-.side a[href="https://webchat.mlas1.org/?nick=Gummy...&channels=mlas1&prompt=1"]
+.side a[href="http://webchat.dmzirc.net/?nick=Gummy...&channels=horseplay&prompt=1"]
 {
    display:block;
    width: 512px;
@@ -953,7 +959,7 @@ a.author[href$=LlamaInDrag]:before { content:"A FKN DINOSAUR" }
 a.author[href$=Nagashizuri]:before { content:"Maga" }
 a.author[href$=andresonic1]:before { content:"Fake" }
 a.author[href$=Bflat13]:before { content:"MOTHER FUCKING SUGAR!" }
-a.author[href$=clonger]:before { content:"The Cringler" }
+a.author[href$=clonger]:before { content:"The Other Mod" }
 a.author[href$=FUCKING_HATE_REDDIT]:before { content:"Freakin' Dislike Webplace" }
 a.author[href$=andysonic3]:before { content:"Chibi Sailor Andy" }
 a.author[href$=andysonic0]:before { content:"Mini Andy" }
@@ -1145,7 +1151,7 @@ a.author[href$="10z20Luka"]:after { content:" (Wears, a flaming kilt made from t
 a.author[href$=JIVEprinting]:after { content:" Christfag" }
 a.author[href$="Conky_"]:after { content:" In a Lot of Trouble, Mr." }
 a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
-a.author[href$="clonger"]:after { content:" the prodigal son returns."; color:goldenrod}
+a.author[href$="clonger"]:after { content:" please leave a message after the beep"; color:green}
 a.author[href$="andysonic3"]:after { content:" THE NO FUN DEPUTY" }
 a.author[href$="andysonic0"]:after { content:" THE NO FUN CHIEF" }
 a.author[href$="Andysonic-1"]:after { content:" THE NO FUN ROOKIE" }
@@ -1580,3 +1586,11 @@ a.author[href$="Parasprite"] {color:#D19FE3!important}
     background-repeat: no-repeat;
     margin-bottom: -1px;
     }
+
+html {
+cursor: wait;
+}
+
+textarea, input {
+cursor: vertical-text;
+}
